--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.0",
+    "@types/ws": "^8.5.12",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "ws": "^8.18.0"
   }
 }
